A stupid temp fix for iOS scroll weirdness after overflow:hidden

--- a/src/assets/sass/laravel-uno-theme/_layout.scss
+++ b/src/assets/sass/laravel-uno-theme/_layout.scss
@@ -43,6 +43,7 @@ body {
 
 .nav__overflow {
     overflow: hidden;
+    position: fixed;
 }
 
 #app {
