--- a/src/assets/sass/laravel-uno-theme/_navigation.scss
+++ b/src/assets/sass/laravel-uno-theme/_navigation.scss
@@ -17,6 +17,7 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            align-items: center;
             @media only screen and (max-width: 1024px) {
                 flex-direction: column;
                 justify-content: space-between;
@@ -76,7 +77,7 @@
                 position: relative;
                 font-weight: 700;
                 text-transform: uppercase;
-                min-height: 3rem;
+                height: 5rem;
                 transition: $transition-350;
                 @media only screen and (max-width: 1024px) {
                     display: flex;
